fixed chart issue on mobile devies

--- a/src/Components/Chart/Chart.module.css
+++ b/src/Components/Chart/Chart.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     width:75%;
 }
-@media (max-width:100%){
+@media (max-width:767px){
     .container{
         width:100%
     }
